<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibm.hondaconnect.ContextualAlertsScreen">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorGrayShade"
        android:title="@string/manage_alert"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:layout_margin="10dp"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:background="@color/yellow_box"
    android:text="@string/alerts_header"/>

    <LinearLayout
        android:id="@+id/ll_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/weather_alerts"
            android:layout_gravity="left|center"
            android:textSize="@dimen/msil_text_size_large"
            android:textColor="@color/grey_text_color"
            android:layout_margin="@dimen/login_activity_vertical_margin_input_fields"
            />

        <Switch
            android:id="@+id/weather_switch"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrayShade" />


    <LinearLayout
        android:id="@+id/ll_traffic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/traffic_alerts"
            android:layout_gravity="left|center"
            android:textSize="@dimen/msil_text_size_large"
            android:textColor="@color/grey_text_color"
            android:layout_margin="@dimen/login_activity_vertical_margin_input_fields"
            />

        <Switch
            android:id="@+id/traffic_switch"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrayShade" />


    <LinearLayout
        android:id="@+id/ll_contextual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/contextual_alerts"
            android:layout_gravity="left|center"
            android:textSize="@dimen/msil_text_size_large"
            android:textColor="@color/grey_text_color"
            android:layout_margin="@dimen/login_activity_vertical_margin_input_fields"
            />

        <Switch
            android:id="@+id/contextual_switch"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrayShade" />


    </LinearLayout>
</ScrollView>
</RelativeLayout>